# template-cartesi-rust-web

./: .dockerignore  .gitignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  zellij.kdl
cartesi/: Cargo.toml
cartesi/src/: main.rs
machine/: Cargo.toml
machine/src/: lib.rs
web/: index.html  index.js
